--- a/templates/plano/pago_pdf.html
+++ b/templates/plano/pago_pdf.html
@@ -12,15 +12,15 @@
 <form method="post" type="w">
     <HR WIDTH=550>
     <div>
-    <h1>RED SOLUCIONES INFORMATICAS</h1>
-        <p>Dirección: Dr. Antonio del Pino n° 616</p>
-        <p>Tel.: 3837-420540</p>
-        <p>Email: sdcordoba@yahoo.com</p>
+    <h1>MUNICIPALIDAD DE TINOGASTA</h1>
+        <p>Dirección: Dr. Antonio del Pino n° </p>
+        <p>Tel.: </p>
+        <p>Email: </p>
         <p>Documento no valido como factura</p>
     </div>
 
     <HR WIDTH=550>
-    <h1>DATOS DEL EQUIPO</h1>
+    <h1>DATOS DEL PLANO</h1>
     <h2> Fecha de Solicitud: {{tecnicos.fecha}}</h2>
     <h2>Orden de reparación N° {{tecnicos.id}}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
