--- a/templates/plano/plano_form.html
+++ b/templates/plano/plano_form.html
@@ -18,5 +18,5 @@
 
 </div>
 <br>
-<a class="btn btn-primary" href="{%url 'tecnico_listar'%}">Salir</a>
+<a class="btn btn-primary" href="{%url 'plano_listar'%}">Salir</a>
 {% endblock%}
