--- a/templates/plano/plano_list.html
+++ b/templates/plano/plano_list.html
@@ -1,32 +1,34 @@
 {% extends 'base/base.html' %}
-{% block title%} Busqueda de Registros {% endblock %}
+
+
 {%block header%}
 {%endblock%}
+
 {% block content %}
 <br>
 <br>
-<form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'plano_buscar'%}">
-    {% csrf_token %}
+<form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'tecnico_buscar'%}" >
+ {% csrf_token %}
     <input class="form-control mr-sm-2" type="text" placeholder="Search" name="buscalo" id="busca">
     <button class="btn btn-secondary my-2 my-sm-0" type="submit" href="" id="botonBus">Busqueda por DNI</button>
 </form>
 <br>
 <table class="table table-hover">
     <thead>
-        <tr class="table-warning">
-            <td scope="col">#</td>
-            <td scope="col">Fecha Solicitud</td>
-            <td scope="col">Usuario</td>
-            <td scope="col">Total a Pagar</td>
-            <td scope="col">Fecha de pago</td>
-            <td scope="col">Deuda</td>
-            <td scope="col">Estado</td>
-            <td scope="col">Acciones</td>
-        </tr>
+    <tr class="table-warning" >
+        <td scope="col">#</td>
+        <td scope="col">Fecha Solicitud</td>
+        <td scope="col">Usuario</td>
+        <td scope="col">Total a Pagar</td>
+        <td scope="col">Fecha de pago</td>
+        <td scope="col">Deuda</td>
+        <td scope="col">Estado</td>
+        <td scope="col">Acciones</td>
+    </tr>
     </thead>
     <tbody>
-        {% if planos%}
-            {%for plano in planos%}
+        {% if object_list%}
+            {%for plano in object_list%}
                 {% if plano.deuda == 0 %}
         <tr class="table-success">
                 {% elif plano.deuda > 0 %}
@@ -70,13 +72,14 @@
     </tbody>
 </table>
 <nav aria-label="Page navigation example">
-    <ul class="pagination">
-        {% if planos.has_previous %}
-        <li class="page-item"><a class="page-link" href="?page={{ planos.previous_page_number }}">Previous</a></li>
-        {% endif%} {% if planos.has_next %}
-        <li class="page-item"><a class="page-link" href="?page={{ planos.next_page_number }}">Next</a></li>
-        {% endif%}
-    </ul>
+  <ul class="pagination">
+      {% if page_obj.has_previous %}
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+      {% endif%}
+      {% if page_obj.has_next %}
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+      {% endif%}
+  </ul>
 </nav>
 
 {% endblock%}
@@ -85,7 +88,7 @@
 <script>
     $(document).ready(function() {
         $('.boton1').click(function() {
-            window.alert('El usuario ya saldo su deuda \nNo podras emitir un comprobante de pago!');
+            window.alert('Realiza el informe técnico y cambia el estado a "Entregado" \nDe esa manera podrás emitir el comprobante de pago!');
         });
     });
 </script>
@@ -100,6 +103,5 @@
         });
     });
 </script>
-
 
 {%endblock%}
