--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -42,10 +42,10 @@
                   </div>
                 </li>
                    <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Servicio técnico</a>
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Planos</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="">Nuevo servicio</a>
-                    <a class="dropdown-item" href="">Registo</a>
+                    <a class="dropdown-item" href="{%url 'plano_nuevo'%}">Nuevo Plano</a>
+                    <a class="dropdown-item" href="{%url 'plano_listar'%}">Listado</a>
                   </div>
                 </li>
               </ul>
