--- a/templates/plano/pago_pdf.html
+++ b/templates/plano/pago_pdf.html
@@ -21,49 +21,37 @@
 
     <HR WIDTH=550>
     <h1>DATOS DEL PLANO</h1>
-    <h2> Fecha de Solicitud: {{tecnicos.fecha}}</h2>
-    <h2>Orden de reparación N° {{tecnicos.id}}
+    <h2> Fecha de Solicitud: {{planos.fecha}}</h2>
+    <h2>Orden de reparación N° {{planos.id}}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Cliente: {{tecnicos.cliente}}</h2>
+        Usuario: {{planos.usuario}}</h2>
 
-    <h2>Producto: {{tecnicos.producto}}
+    <h2>Direccion de la Obra: {{planos.dir_obra}}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Marca: {{tecnicos.marca}}</h2>
+        Precio por metro cuadrado: {{planos.precio_metro}} </h2>
 
-    <h2>Modelo: {{tecnicos.modelo}}
+    <h2>Total de metros del plano: {{planos.metros}}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    Color: {{tecnicos.color}}</h2>
+    Total a pagar: {{planos.total}}</h2>
 
-    <h2>S/N: {{tecnicos.serie}}
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        {%if tecnicos.extra == None%}
-        Accesorios incluidos: Sin accesorios</h2>
-        {% else %}
-        Accesorios incluidos: {{tecnicos.extra}}</h2>
-        {% endif%}
-    <h2>Estado: {{tecnicos.estado}}</h2>
     <HR WIDTH=550>
-    <h1>SERVICIO TECNICO</h1>
-    <h2>Fecha de entrega: {{tecnicos.fechaen}}</h2>
-    <h2>Diagnostico: {{tecnicos.diagnostico}}</h2>
-    <h2>Proceso Relizado: {{tecnicos.realizar}}</h2>
-    <h2>Observaciones: {{tecnicos.observacion}}</h2>
+    <h1>DATOS DEL PAGO</h1>
+    <h2>Fecha de pago: {{planos.fecha_pago}}</h2>
+    <h2>Monto pagado: {{planos.pago}}</h2>
+    <h2>Saldo pendiente: {{planos.deuda}}</h2>
     <br>
-    <h1 align="right">TOTAL A PAGAR: {{tecnicos.precio}}</h1>
+    <h1 align="right">TOTAL A PAGAR: {{planos.pago}}</h1>
 
 </form>
 
