--- a/templates/plano/plano_list.html
+++ b/templates/plano/plano_list.html
@@ -40,7 +40,11 @@
                     <td>{{plano.fecha}}</td>
                     <td>{{plano.usuario}}</td>
                     <td>{{plano.total}}</td>
+                    {% if plano.fecha_pago == None %}
+                    <td>No se registro pago</td>
+                    {% else %}
                     <td>{{plano.fecha_pago}}</td>
+                    {% endif %}
                     <td>{{plano.deuda}}</td>
                     {% if plano.deuda == 0 %}
                     <td>Deuda Saldada</td>
@@ -51,14 +55,18 @@
                         <nav class="dropdownmenu">
                             <li><a>Seleccionar</a>
                                 <ul id="submenu">
-                                    <li><a href="{%url 'plano_editar' plano.id%}">Editar datos</a></li>
-                                    <li><a href="{%url 'plano_editar' plano.id%}">Datos Plano</a></li>
-                                    <li><a href="{%url 'pago_nuevo' plano.id%}">Realizar pago</a></li>
-                                    {% if plano.deuda == 0 %}
+                                    <li><a href="{%url 'plano_editar' plano.id%}">Editar</a></li>
+                                    <li><a href="{%url 'plano_editar' plano.id%}">Plano</a></li>
+                                    <li><a href="{%url 'pago_nuevo' plano.id%}">pago</a></li>
+                                    {% if plano.deuda == 0 or plano.pago == 0%}
                                     <li><a href="" class="boton1">Comprobante de pago</a></li>
-                                    {% elif plano.deuda > 0 %}
+                                    {% elif plano.deuda > 0%}
                                     <li><a href="{%url 'pago_pdf' plano.id%}">Comprobante de pago</a></li>
                                     {% endif %}
+                                    {% if plano.deuda > 0 and plano.total != plano.deuda %}
+                                    <li><a href="{%url 'pago_cuota_2' plano.id%}">cuota 2</a></li>
+                                    <li><a href="{%url 'pago_cuota_3' plano.id%}">cuota 3</a></li>
+                                    {% endif%}
                                 </ul>
                             </li>
                         </nav>
