--- a/templates/usuario/usuario_list.html
+++ b/templates/usuario/usuario_list.html
@@ -45,7 +45,7 @@
             <li><a>Seleccionar</a>
             <ul id="submenu">
                 <li><a href="">Agua y cloacas</a></li>
-                <li><a href="">Planos</a></li>
+                <li><a href="{%url 'plano_nuevo' usuario.id%}">Planos</a></li>
                 <li><a href="">Cementerio</a></li>
             </ul>
             </li>
