--- a/templates/plano/plano_list.html
+++ b/templates/plano/plano_list.html
@@ -20,7 +20,7 @@
         <td scope="col">Fecha Solicitud</td>
         <td scope="col">Usuario</td>
         <td scope="col">Total a Pagar</td>
-        <td scope="col">Fecha de pago</td>
+        <td scope="col">Tipo de Pago</td>
         <td scope="col">Deuda</td>
         <td scope="col">Estado</td>
         <td scope="col">Acciones</td>
@@ -40,10 +40,10 @@
                     <td>{{plano.fecha}}</td>
                     <td>{{plano.usuario}}</td>
                     <td>{{plano.total}}</td>
-                    {% if plano.fecha_pago == None %}
-                    <td>No se registro pago</td>
+                    {% if plano.cuota == False %}
+                    <td>Pago unico</td>
                     {% else %}
-                    <td>{{plano.fecha_pago}}</td>
+                    <td>Pago en cuotas</td>
                     {% endif %}
                     <td>{{plano.deuda}}</td>
                     {% if plano.deuda == 0 %}
@@ -57,15 +57,23 @@
                                 <ul id="submenu">
                                     <li><a href="{%url 'plano_editar' plano.id%}">Editar</a></li>
                                     <li><a href="{%url 'plano_editar' plano.id%}">Plano</a></li>
-                                    <li><a href="{%url 'pago_nuevo' plano.id%}">pago</a></li>
-                                    {% if plano.deuda == 0 or plano.pago == 0%}
-                                    <li><a href="" class="boton1">Comprobante de pago</a></li>
-                                    {% elif plano.deuda > 0%}
-                                    <li><a href="{%url 'pago_pdf' plano.id%}">Comprobante de pago</a></li>
+                                    {% if plano.cuota == False %}
+                                    <li><a href="{%url 'pago_nuevo' plano.id%}">pago unico</a></li>
+                                    {% elif plano.cuota == True %}
+                                    <li><a href="{%url 'pago_nuevo' plano.id%}">cuota 1</a></li>
                                     {% endif %}
-                                    {% if plano.deuda > 0 and plano.total != plano.deuda %}
+                                    {% if plano.deuda < plano.total or plano.deuda == 0 %}
+                                    <li><a href="{%url 'pago_pdf' plano.id%}">Comprobante</a></li>
+                                    {% endif %}
+                                    {% if plano.cuota == True %}
                                     <li><a href="{%url 'pago_cuota_2' plano.id%}">cuota 2</a></li>
+                                    {% if plano.pago2 > 0 %}
+                                    <li><a href="">Comprobante</a></li>
+                                    {% endif %}
                                     <li><a href="{%url 'pago_cuota_3' plano.id%}">cuota 3</a></li>
+                                    {% if plano.pago3 > 0 %}
+                                    <li><a href="">Comprobante</a></li>
+                                    {% endif %}
                                     {% endif%}
                                 </ul>
                             </li>
