--- a/static/css/submenu.css
+++ b/static/css/submenu.css
@@ -20,7 +20,7 @@
 	background: #22B24C; /*color de boton*/
 	color: #FFFFFF;
 	display: block;
-	font: bold 12px/20px sans-serif;
+	font: Open Sans 12px/20px sans-serif;
 	padding: 10px 25px;
 	text-align: center;
 	text-decoration: none;
