--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,7 +5,7 @@
 	{% load static %}
 	{% block static %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/submenu.css' %}">
 	<link rel="stylesheet" href="{% static 'css/imagen.css' %}">
 	<script src="{% static 'js/jquery.min.js'%}"></script>
@@ -19,7 +19,7 @@
 	{%block header%}
 	<header>
 		<div>
-			<img src="{% static 'img/red.jpg' %}" id="img">
+			<img src="{% static 'img/municipalidad.png' %}" id="img">
 
 		</div>
 	</header>
@@ -28,11 +28,11 @@
 	<div class="container">
 
 		{% block navbar %}
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="collapse navbar-collapse" id="navbarsExample03">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="{%url 'index'%}">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="{%url 'index'%}">Inicio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
