--- a/templates/usuario/index.html
+++ b/templates/usuario/index.html
@@ -14,6 +14,7 @@
       <a class="btn btn-success btn-lg d-inline-block m-1" href="{%url 'plano_listar'%}" role="button">PLANOS</a>
       <a class="btn btn-success btn-lg d-inline-block m-1" href="" role="button">CONEXIONES</a>
       <a class="btn btn-success btn-lg d-inline-block m-1" href="" role="button">CEMENTERIO</a>
+      <a class="btn btn-success btn-lg d-inline-block m-1" href="" role="button">NOTIFICACIONES</a>
   </p>
 
 
@@ -25,7 +26,7 @@
 <footer class="blog-footer">
   <p class="text-center">Servicio de software a medida.</p>
   <p class="text-center">
-    <a>Copyright CHIPMUNK © 2019. All rights reserved.</a>
+    <a>Copyright CHIPMUNK SOFTWARE © 2019. All rights reserved.</a>
   </p>
 </footer>
 {%endblock%}
