--- a/templates/plano/plano_list.html
+++ b/templates/plano/plano_list.html
@@ -72,7 +72,7 @@
                             <div class="dropdown-menu" style="">
                               <a class="dropdown-item" href="{%url 'plano_editar' plano.id%}">Editar</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Más Datos</a>
+                              <a class="dropdown-item" href="{%url 'dato_plano' plano.id%}">Más Datos</a>
                             </div>
                           </li>
                         </ul>
