--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -35,17 +35,24 @@
                   <a class="nav-link" href="{%url 'index'%}">Inicio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown03">
                     <a class="dropdown-item" href="{%url 'usuario_nuevo'%}">Nuevo usuario</a>
                     <a class="dropdown-item" href="{%url 'usuario_listar'%}">Usuarios Registrados</a>
                   </div>
                 </li>
-                   <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Planos</a>
+                  <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Proyectistas</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'plano_nuevo'%}">Nuevo Plano</a>
-                    <a class="dropdown-item" href="{%url 'plano_listar'%}">Listado</a>
+                    <a class="dropdown-item" href="{%url 'proyectista_nuevo'%}">Nuevo Proyectista</a>
+                    <a class="dropdown-item" href="{%url 'proyectista_listar'%}">Proyectistas Registrados</a>
+                  </div>
+                </li>
+                   <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Derechos de construcción</a>
+                  <div class="dropdown-menu" aria-labelledby="dropdown03">
+                    <a class="dropdown-item" href="{%url 'plano_nuevo'%}">Nuevo Registro</a>
+                    <a class="dropdown-item" href="{%url 'plano_listar'%}">Lista de registros</a>
                   </div>
                 </li>
               </ul>
