--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -54,6 +54,13 @@
                     <a class="dropdown-item" href="{%url 'plano_nuevo'%}">Nuevo Registro</a>
                     <a class="dropdown-item" href="{%url 'plano_listar'%}">Lista de registros</a>
                   </div>
+                  <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Vencimientos</a>
+                  <div class="dropdown-menu" aria-labelledby="dropdown03">
+                    <a class="dropdown-item" href="{%url 'notifica_nuevo'%}">Crea Notificación</a>
+                    <a class="dropdown-item" href="{%url 'notifica_listar'%}">Ver Estados</a>
+                  </div>
+                </li>
                 </li>
               </ul>
             </div>
