--- a/templates/notifica/buscar.html
+++ b/templates/notifica/buscar.html
@@ -10,7 +10,7 @@ Busqueda de Clientes
 {% block content %}
 <br>
 <br>
-<form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'usuario_buscar'%}">
+<form class="form-inline my-2 my-lg-0" type="get" method="POST" action="{%url 'notifica_buscar'%}">
  {% csrf_token %}
     <input class="form-control mr-sm-2" type="text" placeholder="Search" name="buscalo" id="busca">
     <button class="btn btn-secondary my-2 my-sm-0" type="submit" href="" id="botonBus">Busqueda por DNI</button>
@@ -20,46 +20,58 @@ Busqueda de Clientes
     <thead>
     <tr class="table-warning" >
         <td scope="col">#</td>
-        <td scope="col">Nombre y Apellido</td>
+        <td scope="col">Fecha del Hecho</td>
+        <td scope="col">Lugar del Hecho</td>
+        <td scope="col">Cacteristicas del Hecho</td>
+        <td scope="col">Usuario</td>
         <td scope="col">DNI</td>
-        <td scope="col">Dirección</td>
         <td scope="col">Catastro</td>
-        <td scope="col">Celular</td>
+        <td scope="col">Hechos Infraccionales</td>
+        <td scope="col">Fecha de Presentación</td>
+        <td scope="col">Presentación</td>
         <td scope="col">Acciones</td>
     </tr>
     </thead>
     <tbody>
-        {% if usuarios%}
-        {%for   usuario in usuarios%}
+{% if object_list%}
+            {%for notifica in object_list%}
+                {% if notifica.situacion == True or f_actual < notifica.fecha_limite %}
         <tr class="table-success">
-            <td>{{usuario.id}}</td>
-            <td>{{usuario.nombre}}</td>
-            <td>{{usuario.dni}}</td>
-            <td>{{usuario.direccion}}</td>
-             <td>{{usuario.catastro}}</td>
-            {% if usuario.tel == None %}
-            <td>Sin Celular</td>
-            {% else %}
-             <td>{{usuario.tel}}</td>
+                {% elif f_actual > notifica.fecha_limite %}
+                <tr class="table-danger">
+                    {% endif %}
+            <td>{{notifica.id}}</td>
+            <td>{{notifica.fecha}}</td>
+            <td>{{notifica.lugar}}</td>
+            <td>{{notifica.caracteristicas}}</td>
+            <td>{{notifica.usuario.nombre}}</td>
+                <td>{{notifica.usuario.dni}}</td>
+                <td>{{notifica.usuario.catastro}}</td>
+                <td>{{notifica.hechos}}</td>
+                <td>{{notifica.fecha_limite}}</td>
+            {% if notifica.situacion == False %}
+            <td>No</td>
+            {% elif notifica.situacion == True %}
+             <td>SI</td>
             {% endif %}
-            <td><a class="btn btn-primary" href="{%url 'usuario_editar' usuario.id%}">Editar</a></td>
+            <td><a class="btn btn-primary" href="{%url 'notifica_editar' notifica.id%}">Editar</a></td>
         </tr>
         {%endfor%}
         {% else %}
         <div class="alert alert-dismissible alert-success">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <strong>Ups! </strong>tú busqueda no dio resultados, <a href="{%url 'usuario_listar'%}" class="alert-link">intentalo de nuevo</a>.
+          <strong>Ups! </strong>tú registro esta vacio, <a href="{% url 'notifica_nuevo' %}" class="alert-link">ingresa uno</a>.
         </div>
         {%endif%}
     </tbody>
 </table>
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-      {% if clientes.has_previous %}
-    <li class="page-item"><a class="page-link" href="?page={{ usuarios.previous_page_number }}">Previous</a></li>
+      {% if notificas.has_previous %}
+    <li class="page-item"><a class="page-link" href="?page={{ notificas.previous_page_number }}">Previous</a></li>
       {% endif%}
-      {% if clientes.has_next %}
-    <li class="page-item"><a class="page-link" href="?page={{ usuarios.next_page_number }}">Next</a></li>
+      {% if notificas.has_next %}
+    <li class="page-item"><a class="page-link" href="?page={{ notificas.next_page_number }}">Next</a></li>
       {% endif%}
   </ul>
 </nav>
