--- a/templates/plano/buscar.html
+++ b/templates/plano/buscar.html
@@ -33,7 +33,7 @@
                 {% if plano.deuda == 0 %}
         <tr class="table-success">
                 {% elif plano.deuda %}
-            <tr class="table-primary">
+            <tr class="table-danger">
                 {% else %}
                 <tr class="table-danger">
                     {% endif %}
