--- a/templates/plano/plano_list.html
+++ b/templates/plano/plano_list.html
@@ -43,7 +43,7 @@
         {% if object_list%}
             {%for plano in object_list%}
                 {% if plano.deuda == 0 %}
-        <tr class="table-info">
+        <tr class="table-success">
                 {% elif plano.deuda %}
             <tr class="table-danger">
                 {% else %}
