--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -44,21 +44,21 @@
                   <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Proyectistas</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'proyectista_nuevo'%}">Nuevo Proyectista</a>
+                    <a class="dropdown-item" href="{%url 'proyectista_nuevo'%}">Nuevo</a>
                     <a class="dropdown-item" href="{%url 'proyectista_listar'%}">Proyectistas Registrados</a>
                   </div>
                 </li>
                    <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Derechos de construcción</a>
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Liquidación de planos</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'plano_nuevo'%}">Nuevo Registro</a>
-                    <a class="dropdown-item" href="{%url 'plano_listar'%}">Lista de registros</a>
+                    <a class="dropdown-item" href="{%url 'plano_nuevo'%}">Nuevo Pago</a>
+                    <a class="dropdown-item" href="{%url 'plano_listar'%}">Registros de Pagos</a>
                   </div>
                   <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Vencimientos</a>
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Infracciones</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{%url 'notifica_nuevo'%}">Crea Notificación</a>
-                    <a class="dropdown-item" href="{%url 'notifica_listar'%}">Ver Estados</a>
+                    <a class="dropdown-item" href="{%url 'notifica_nuevo'%}">Crea Acta</a>
+                    <a class="dropdown-item" href="{%url 'notifica_listar'%}">Registros</a>
                   </div>
                 </li>
                 </li>
