--- a/templates/notifica/notifica_list.html
+++ b/templates/notifica/notifica_list.html
@@ -58,7 +58,7 @@
                             <div class="dropdown-menu" style="">
                               <a class="dropdown-item" href="{%url 'notifica_editar' notifica.id%}">Editar</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="">Crea Notificación</a>
+                              <a class="dropdown-item" href="{%url 'notifica_pdf' notifica.id%}">Crea Notificación</a>
                                 <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="{%url 'presenta_editar' notifica.id%}">Presentacion persona</a>
                             </div>
